SET( CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    ${SBOL_EXAMPLE_DIR}
)

INCLUDE_DIRECTORIES(
    ${LIBXML2_INCLUDE_DIR}
    ${SBOL_SOURCE_DIR}
)

FILE( GLOB SBOL_EXAMPLE_TARGETS
    ${SBOL_EXAMPLE_DIR}/*.c
)

FOREACH( TARGET ${SBOL_EXAMPLE_TARGETS} )

    GET_FILENAME_COMPONENT( BASENAME ${TARGET} NAME_WE )
    ADD_EXECUTABLE( ${BASENAME}
        ${SBOL_SOURCE_FILES}
        ${TARGET}
    )
    TARGET_LINK_LIBRARIES( ${BASENAME} sbol )

ENDFOREACH()
