SET( CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    ${SBOL_TEST_DIR}
)

INCLUDE_DIRECTORIES(
    ${LIBXML2_INCLUDE_DIR}
    ${SBOL_SOURCE_DIR}
)

FILE( GLOB SBOL_TEST_FILES
    ${SBOL_TEST_DIR}/*.h
    ${SBOL_TEST_DIR}/*.c
)

FILE( GLOB SBOL_TEST_TARGETS
    ${SBOL_TEST_DIR}/test_all.c
)

FOREACH( TARGET ${SBOL_TEST_TARGETS} )

    GET_FILENAME_COMPONENT( BASENAME ${TARGET} NAME_WE )
    ADD_EXECUTABLE( ${BASENAME}
        ${SBOL_SOURCE_FILES}
        ${SBOL_TEST_FILES}
        ${TARGET}
    )
    TARGET_LINK_LIBRARIES( ${BASENAME} sbol )

ENDFOREACH()
