PROJECT( RAPTOR2 C )
INCLUDE_DIRECTORIES( BEFORE
    ${RAPTOR2_SOURCE_DIR}/src
	${RAPTOR2_SOURCE_DIR}/librdfa
	${RAPTOR2_SOURCE_DIR}/utils
)

#ADD_DEFINITIONS(-D__cplusplus)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)
ADD_DEFINITIONS(-DLIBRDFA_IN_RAPTOR)
ADD_DEFINITIONS(-DRAPTOR_INTERNAL=1)

IF(WIN32)
	ADD_DEFINITIONS(-DWIN32)
	IF (MINGW)
		ADD_DEFINITIONS(-D__MINGW32__)
	ELSE(MINGW)
		ADD_DEFINITIONS(-Dstrcasecmp=_stricmp)
		ADD_DEFINITIONS(-Dstrncasecmp=_strnicmp)
		ADD_DEFINITIONS(-Dstrtok_r=strtok_s)
		ADD_DEFINITIONS(-Dgettimeofday=timeGetTime)
	ENDIF(MINGW)
ENDIF(WIN32)

FILE( GLOB RAPTOR2_SRC src/*.c src/*.y utils/*.c librdfa/*.c)

ADD_DEFINITIONS(-DHAVE_EXPAT_CONFIG_H)
FILE( GLOB  EXPAT_SRC_FILES   ${RAPTOR2_SOURCE_DIR}/../expat/lib/*.c)
#SET_SOURCE_FILES_PROPERTIES(${RAPTOR2_SRC}  PROPERTIES LANGUAGE CXX)

ADD_LIBRARY( raptor2
  SHARED
#  STATIC
  ${EXPAT_SRC_FILES}
  ${RAPTOR2_SRC} 
)

#SET_TARGET_PROPERTIES(raptor2 PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES( raptor2
   raptor2
   libcurl
)

#----------------------------------
#  INSTALL libraptor in . (CPack)
#----------------------------------

IF ( WIN32 )
   INSTALL(TARGETS raptor2 DESTINATION bin/../)
ELSE ( WIN32 )
   INSTALL(TARGETS raptor2 LIBRARY DESTINATION bin/../)
ENDIF( WIN32 )

